outputs/d222d739-1b5a-4a3d-ba10-72b13515d623.txt
C:\Users\Dell\Dropbox\PC\Desktop\ONLINE JUDGE\OJ\codes\d222d739-1b5a-4a3d-ba10-72b13515d623.cpp:1:3: error: invalid preprocessing directive #your
 # your code hereufgku
   ^~~~
